@@ -1,0 +1,1 @@
+MD5 4d77cc35f049cb17f6bf677e79c54351 abiword-0.99.2.tar.gz 17046290
