@@ -1,6 +1,8 @@
 # ChangeLog for app-office/abiword
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/ChangeLog,v 1.1 2002/02/01 21:53:09 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/abiword/ChangeLog,v 1.2 2002/02/24 14:48:01 azarah Exp $
+
+*abiword-0.99.2 (25 Feb 2002)
 
 *abiword-0.9.6.1-r1 (1 Feb 2002)
 
